--- a/gui/package.json
+++ b/gui/package.json
@@ -31,6 +31,7 @@
     "redux": "^4.0.4",
     "sprintf-js": "^1.1.2",
     "stream-json": "^1.3.0",
+    "styled-components": "^5.1.0",
     "uuid": "^3.0.1",
     "validated": "^2.0.1"
   },
@@ -57,6 +58,7 @@
     "@types/sinon": "^7.0.5",
     "@types/sprintf-js": "^1.1.2",
     "@types/stream-json": "^1.0.0",
+    "@types/styled-components": "^5.1.0",
     "@types/topojson-specification": "^1.0.1",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
